# ece4760-hardware-aimassist

./: CMakeLists.txt  hello_usb.c  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
